<resources>
    <string name="main_function" translatable="false">首页</string>
    <string name="main_course" translatable="false">课程</string>
    <string name="main_discpver" translatable="false">发现</string>
    <string name="main_telecast" translatable="false">直播</string>
    <string name="main_exam" translatable="false">考试</string>
    <string name="login_name" translatable="false">用户名：</string>
    <string name="login_pwd" translatable="false">密码：</string>
    <string name="app_name" translatable="false">成长吧</string>
    <string name="net_error" translatable="false">当前网络不可用，请先连接Internet！</string>
	<string name="recent_browse_title" translatable="false">最近浏览</string>
	<string name="loadTitle" translatable="false"><strong>正在更新数据</strong></string>
	<string name="price" translatable="false">价格</string>
	<string name="goback" translatable="false">返回</string>
	<string name="collect" translatable="false">收藏</string>
	<string name="alert_push" translatable="false">无法正常收发消息时,请确认\"系统设置—&#8212;通知\"中成长在线已被打开</string>
	<string name="main_loading" translatable="false">玩命加载中&#8230;</string>
	<string name="data_saveing" translatable="false">信息保存中&#8230;</string>
	<string name="downmenu_title" translatable="false">我的课程(200)</string>
    <string name="name_chazhao" translatable="false">查找您感兴趣的课程</string>
    <string name="name_fenlei" translatable="false">分类</string>
    <string name="name_bisiness_tab" translatable="false">资讯</string>
    <string name="name_kaoshi_tab" translatable="false">我</string>
    <string name="name_talk_tab" translatable="false">讨论</string>
    <string name="freecourse" translatable="false">免费</string>
    <string name="name_quanbu" translatable="false">全部</string>
    <string name="name_paixu" translatable="false">排序</string>
    <string name="name_zuixin" translatable="false">最新</string>
    <string name="name_shijian" translatable="false">热门</string>
    <string name="name_lookljilu" translatable="false">观看记录</string>
    <string name="name_occupational" translatable="false">职业资格</string>
    <string name="name_one" translatable="false">第一节</string>
    <string name="name_kechengxiazai" translatable="false">选择您想要下载的课程</string>
    <string name="name_xiazai" translatable="false">下载</string>
    <string name="name_downNow" translatable="false">下载中</string>
    <string name="name_complete" translatable="false">已完成</string>
    <string name="name_username" translatable="false">姓名</string>
    <string name="name_inputusername" translatable="false">请输入手机号码</string>
    <string name="name_authcode" translatable="false">请输入验证码</string>
    <string name="name_password" translatable="false">请输入密码</string>
    <string name="name_confrimpwd" translatable="false">请再次输入密码</string>
    <string name="name_denglu" translatable="false">登录</string>
    <string name="name_regist" translatable="false">注册</string>
    <string name="name_bianji" translatable="false">编辑</string>
    <string name="name_quanxuan" translatable="false">清空</string>
    <string name="name_shanchu" translatable="false">删除</string>
    <string name="name_zuixinkec" translatable="false">最新课程详解第一步到位</string>
    <string name="name_tuijian" translatable="false">推荐课程</string>
    <string name="name_quanbukec" translatable="false">全部课程</string>
    <string name="name_hangyezixun" translatable="false">行业资讯</string>
    <string name="name_lijidenglu" translatable="false">立即登录</string>
    <string name="name_mycoller" translatable="false">我的收藏</string>
    <string name="name_mycourse" translatable="false">我的课程</string>
    <string name="name_myplay" translatable="false">播放记录</string>
    <string name="name_lixianxiazai" translatable="false">离线下载</string>
    <string name="name_autoplay" translatable="false">视频自动播放</string>
    <string name="name_changeplay1" translatable="false">CC视频播放</string>
    <string name="name_changeplay2" translatable="false">乐视视频播放</string>
    <string name="name_download" translatable="false">下载</string>
    <string name="name_shezhe" translatable="false">设置</string>
    <string name="name_quxiao" translatable="false">取消</string>
    <string name="name_fenleis" translatable="false">分类：</string>
    <string name="name_genxin" translatable="false">更新至：</string>
    <string name="name_keshi" translatable="false">课时：</string>
    <string name="name_jiangshi" translatable="false">讲师：</string>
    <string name="name_notice" translatable="false">公告</string>
    <string name="name_course" translatable="false">课程名称</string>
    <string name="name_zhangjie" translatable="false">章节名称</string>
    <string name="name_article" translatable="false">文章</string>
    <string name="name_setname" translatable="false">编辑名片</string>
    <string name="name_loadnumber" translatable="false">下载数量</string>
    <string name="name_login" translatable="false">登录</string>
    <string name="name_exitlogin" translatable="false">退出登录</string>
    <string name="name_findpassword" translatable="false">找回密码</string>
    <string name="name_resetpwd" translatable="false">重置密码</string>
    <string name="name_userregist" translatable="false">用户注册</string>
    <string name="name_wifi" translatable="false">允许非WIFI下网络播放/缓存视频</string>
    <string name="warn_wifi" translatable="false">请慎重选择开启 避免过度使用流量</string>
    <string name="name_push" translatable="false">推送设置</string>
    <string name="name_pushtext" translatable="false">接受推送通知</string>
    <string name="name_clean" translatable="false">清除缓存</string>
    <string name="name_feedback" translatable="false">意见反馈</string>
    <string name="name_about" translatable="false">关于成长吧</string>
    <string name="name_checkversion" translatable="false">版本更新</string>
    <string name="name_backimage" translatable="false">返回</string>
    <string name="name_manner" translatable="false">支付方式</string>
    <string name="name_send" translatable="false">发送</string>
    <string name="name_feedtext" translatable="false">请您输入宝贵意见</string>
    <string name="name_listnull_xiti_biji" translatable="false">您还没有添加过笔记</string>
    <string name="name_Teacher_zige_zheng" translatable="false">教师资格证</string>
    <string name="name_zhiye_zige" translatable="false">职业资格</string>
    <string name="name_gongWuYuan" translatable="false">公务员</string>
    <string name="name_IT" translatable="false">IT</string>
    <string name="name_zhineng_Search" translatable="false">智能搜索</string>
    <string name="name_back_WangXiao" translatable="false">返回网校</string>
    <string name="app_tip" translatable="false">提示</string>
    <string name="getting_access_token" translatable="false">正在获取access token</string>
    <string name="get_access_token_succ" translatable="false">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false" translatable="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid" translatable="false">正在获取预支付订单</string>
    <string name="get_prepayid_succ" translatable="false">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false"  translatable="false">获取prepayid失败，原因%s</string>
    <string name="settings" translatable="false">设置</string>
    <string name="update" translatable="false">升级</string>
    <string name="check_update" translatable="false">查询升级</string>
    <string name="download" translatable="false">下载</string>
    <string name="install" translatable="false">安装</string>
    <string name="result" translatable="false">返回值</string>
    <string name="launch_preferences" translatable="false">启动设置</string>
    <string name="preference_attributes" translatable="false">属性设置</string>
    <string name="global_preference" translatable="false">全局设置</string>
    <string name="global_preference_summary" translatable="false">安全支付服务和DEMO的通用设置</string>
    <string name="remote_call_failed" translatable="false">调用远程服务失败</string>
    <string-array name="launch_list_entries" translatable="false">
        <item>外部商户订单</item>
        <item>远程订单</item>
    </string-array>
    <string name="name_Source" translatable="false">来源:</string>
    <string name="name_chat" translatable="false">话题讨论</string>
    <string name="text_ack_msg" translatable="false">已读</string>
    <string name="text_delivered_msg" translatable="false">送达</string>
    <string name="weichat_pay" translatable="false">微信快捷支付</string>
    <string name="apli_pay" translatable="false">支付宝快捷支付</string>
    <string name="notice_text" translatable="false">公告信息</string>
    <string name="name_mydream" translatable="false">我的梦想</string>
    <string name="name_adddream" translatable="false">添加梦想</string>
    <string name="name_addhobby" translatable="false">添加爱好</string>
    <string name="name_dreamdoc" translatable="false">人生就是一场旅行,所有伟大的的成就都从一个想法开始,大胆的分享自己的梦想,发现有相同梦想的家人,让我们一起来实现它.</string>
    <string name="name_picturedoc" translatable="false">最多可以上传10张形象照,以便家人更加了解你.</string>
    <string name="name_though" translatable="false">我的价值观与信念</string>
    <string name="name_addthough" translatable="false">添加价值观</string>
    <string name="name_thoughdoc" translatable="false">请分享你的价值观和所坚守的信念,以找到同频的家人.</string>
    <string name="name_noset" translatable="false">未设置</string>
    <string name="name_noattention" translatable="false">未关注</string>
    <string name="name_attention" translatable="false">已关注</string>
    <string name="name_companyitem_doc" translatable="false">请真实全面填写企业信息,以便于家人更加了解自己,发现更多合作机会,合作从了解开始.</string>
    <string name="name_productitem_doc" translatable="false">完善产品信息,让家人了解您能提供什么,已发现更多商业合作机会.</string>
    <string name="title_signature" translatable="false">真实地表达自己\n让更多家人了解我\n真实和了解是建立有效人脉的关键</string>
    <string name="hint_signature" translatable="false">真实地表达自己,让更多家人了解我</string>
    <string name="noset_signature" translatable="false">该用户未添加签名</string>
    <string name="name_userhead" translatable="false">头像</string>
    <string name="name_mypic" translatable="false">我的照片</string>
    <string name="name_mycompany" translatable="false">我的企业</string>
    <string name="name_myaddress" translatable="false">我的位置</string>
    <string name="name_myhobby" translatable="false">我的爱好</string>
    <string name="name_mygender" translatable="false">性别</string>
    <string name="name_mymarried" translatable="false">婚否</string>
    <string name="name_mybirthday" translatable="false">我的生日</string>
    <string name="name_myvalues" translatable="false">价值观与信念</string>
    <string name="name_myemail" translatable="false">我的邮箱</string>
    <string name="my_coin" translatable="false">成长币是成长吧平台学员用于课程学习；资料、课件、工具下载或购买，所使用的虚拟货币，成长币不能兑换现金，成长币可以通过分享课程，为课程做代言而获得。</string>
    <string name="aggregate">合计:</string>
    <string name="et_feedback_hint">请输入您的宝贵的意见和建议</string>
    <string name="ed_feedback_connectionway">留下你的联系方式,方便我们老师与您联系!</string>
    <string name="bt_submit">提交</string>
    <string name="name_time_hint">2015&#8211;07&#8211;02 16:63</string>
    <string name="name_ordercode">订单号：</string>
    <string name="immediate_payment2">立即支付</string>
    <string name="count_morry">0.00</string>
    <string name="name_myczb">我的成长币</string>
    <string name="name_czbtofriend">送成长币给朋友</string>
    <string name="name_zbrecharge">用倬币充值</string>
    <string name="name_remarks">备注：</string>
    <string name="name_mornysymbol">¥</string>
    <string name="name_zhifubaopay">支付宝支付</string>
    <string name="name_mysmallmorny">我的零钱</string>
    <string name="bt_recharge">充值</string>
    <string name="bt_withdraw_deposit">提现</string>
    <string name="name_totalamount">商品总额</string>
    <string name="title_mysmallmorny">我的零钱：</string>
    <string name="title_orderstime">下单时间：</string>
    <string name="cancellation_order">取消订单</string>
    <string name="title_needpay">还需支付：</string>
    <string name="bt_confirmorder">确认订单</string>
    <string name="myattention_look_friend">查看好友名片</string>
    <string name="myattention_cancel">取消</string>
    <string name="myattention_im_message">发消息</string>
    <string name="myattention_askfor_note">索要笔记</string>
    <string name="myattention_share_note">分享笔记</string>
</resources>