<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/chengzhangbi1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_myczb"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_pay"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/titlered"
        android:gravity="center"
        android:text="@string/name_czbtofriend"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_tixian"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:text="@string/name_zbrecharge"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/name_remarks"
        android:textColor="@color/text_color_six"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/my_coin"
        android:textColor="@color/text_color_six"
        android:textSize="14sp" />

</LinearLayout>