<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/lingqian2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_mysmallmorny"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/count_morry"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_pay"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/titlered"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/bt_recharge"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_tixian"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:background="@color/dark_grey"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/bt_withdraw_deposit"
        android:textColor="@color/white"
       	android:visibility="gone"
        android:textSize="18sp" />

</LinearLayout>