<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 这里的linearLayout加android:background=""这个属性要谨慎，如果加了后，popwindow是不能半透明了的 -->

    <LinearLayout
        android:id="@+id/ll_blank"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout1"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xiahuaxian" />

        <Button
            android:id="@+id/look_friend"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/myattention_look_friend"
            android:textColor="@color/text_color_one"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xiahuaxian" />
        
        <Button
            android:id="@+id/iv_im_letter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/myattention_im_message"
            android:textColor="@color/text_color_one"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xiahuaxian" />

         <Button
            android:id="@+id/iv_askfor_note"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/myattention_askfor_note"
            android:textColor="@color/text_color_one"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xiahuaxian" />
        
        <Button
            android:id="@+id/iv_share_note"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/myattention_share_note"
            android:textColor="@color/text_color_one"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/xiahuaxian" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/myattention_cancel"
            android:textColor="@color/text_color_one"
            android:textSize="14dp" />
    </LinearLayout>

</RelativeLayout>