<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="13dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/name_ordercode"
                android:textColor="@color/text_color_two"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textColor="@color/text_color_two"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            >

            <ListView
                android:id="@+id/lv_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white" >
            </ListView>
        </LinearLayout>
		<View
		    android:layout_width="match_parent"
		    android:layout_height="10dp"
		    android:background="@color/backGrond" />
        <LinearLayout
            android:id="@+id/ll_course"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/name_manner"
                android:textColor="@color/text_color_two"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/paying_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/name_zhifubaopay"
                android:textColor="@color/text_color_three"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_xiahuaxian" />

        <LinearLayout
            android:id="@+id/ll_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/name_totalamount"
                android:textColor="@color/text_color_two"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/name_mornysymbol"
                android:textColor="@color/text_color_seven"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/count_morry"
                android:textColor="@color/text_color_seven"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_xiahuaxian" />

        <RelativeLayout
            android:id="@+id/ll_balance_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_balance_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="7500.00"
                android:textColor="@color/text_color_seven"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_balance_money"
                android:text="@string/title_mysmallmorny"
                android:textColor="@color/text_color_two"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/ll_actual_money"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_actual_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="7500.00"
                android:textColor="@color/text_color_seven"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tv_actual_money"
                android:text="@string/title_needpay"
                android:textColor="@color/text_color_two"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/name_time_hint"
                android:textColor="@color/text_color_six"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tv_time"
                android:text="@string/title_orderstime"
                android:textColor="@color/text_color_six"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_xiahuaxian" />

        <RelativeLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_pay_order"
                android:layout_width="82dp"
                android:layout_height="32dp"
                android:layout_alignBaseline="@+id/tv_cancel_order"
                android:layout_alignBottom="@+id/tv_cancel_order"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_red_2x"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/immediate_payment2"
                android:textColor="@color/bg_beige"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_cancel_order"
                android:layout_width="82dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tv_pay_order"
                android:background="@drawable/btn_greay_2x"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cancellation_order"
                android:textColor="@color/dialog_text"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>